src/main/java/com/example/restaurant/error/NoTableAvailableException.java
package com.example.restaurant.error;

public class NoTableAvailableException extends RuntimeException{
}
